--- a/LeetCode/排序.md
+++ b/LeetCode/排序.md
@@ -94,9 +94,9 @@ def insert_sort(li):
 
 ### 1.原理
 
-![image-20220224210133888](../assets/基础/image-20220224210133888-16457076968361.png)
+![image-20220224210133888](排序.assets/image-20220224210133888-16457076968361.png)
 
-<img src="D:/桌面/note/assets/基础/image-20220225155442615-16457756871231.png" alt="image-20220225155442615" style="zoom:33%;" />
+<img src="排序.assets/image-20220225155442615-16457756871231-16461378433951.png" alt="image-20220225155442615" style="zoom:33%;" />
 
 16到 8 +8 做一次partition     一次partition是O(n)
 
@@ -152,7 +152,7 @@ def partition(li,left,right):
 
 子树
 
-<img src="D:/桌面/note/assets/基础/image-20220225161834995.png" alt="image-20220225161834995" style="zoom:50%;" />
+<img src="排序.assets/image-20220225161834995.png" alt="image-20220225161834995" style="zoom:50%;" />
 
 ### 2、二叉树
 
@@ -160,13 +160,13 @@ def partition(li,left,right):
 
 每个节点**最多**有两个孩子节点
 
-两个孩子节点被区分为左孩子节点和右孩子节点                                                                        <img src="D:/桌面/note/assets/排序/image-20220227100357398.png" alt="image-20220227100357398" style="zoom:50%;" />
+两个孩子节点被区分为左孩子节点和右孩子节点                                                                        <img src="排序.assets/image-20220227100357398-16461364855832.png" alt="image-20220227100357398" style="zoom:50%;" />
 
 **满二叉树**：一个二叉树，如果**每一个层的结点数都达到最大值**，则这个二叉树就是满二叉树。
 
 **完全二叉树**：叶节点只能出现在**最下层和次下层**，并且最下面一层的结点都**集中在该层最左边**的若干位置的二叉树。
 
-<img src="D:/桌面/note/assets/排序/image-20220227100735935.png" alt="image-20220227100735935" style="zoom: 67%;" />
+<img src="排序.assets/image-20220227100735935-16461364876493.png" alt="image-20220227100735935" style="zoom: 67%;" />
 
 ### 3、二叉树的存储方式（表示方式）
 
@@ -174,7 +174,7 @@ def partition(li,left,right):
 
 **（2）顺序存储方式   （堆排序）**
 
-<img src="D:/桌面/note/assets/排序/image-20220227101113460.png" alt="image-20220227101113460" style="zoom:50%;" />
+<img src="排序.assets/image-20220227101113460-16461364894704.png" alt="image-20220227101113460" style="zoom:50%;" />
 
 父节点和左孩子的关系：
 
@@ -200,11 +200,11 @@ def partition(li,left,right):
 
 小根堆：一棵完全二叉树，满足任一节点都比其孩子节点小
 
-![image-20220227104414453](D:/桌面/note/assets/排序/image-20220227104414453.png)
+![image-20220227104414453](排序.assets/image-20220227104414453-16461364938685.png)
 
 #### 堆的向下调整
 
-节点的左右子树都是堆，但自身不是堆<img src="D:/桌面/note/assets/排序/image-20220227110757065.png" alt="image-20220227110757065" style="zoom:33%;" />
+节点的左右子树都是堆，但自身不是堆<img src="排序.assets/image-20220227110757065-16461364956386.png" alt="image-20220227110757065" style="zoom:33%;" />
 
 ### 5、堆排序过程
 
@@ -312,7 +312,7 @@ def topk(li,k):
 
 合并：将两个有序列表归并，列表越来越大。
 
-<img src="D:/桌面/note/assets/排序/image-20220228163608423.png" alt="image-20220228163608423" style="zoom: 50%;" />
+<img src="排序.assets/image-20220228163608423-16461364992467.png" alt="image-20220228163608423" style="zoom: 50%;" />
 
 ### 2、时间复杂度
 
@@ -365,11 +365,11 @@ def merge_sort(li,low,high):
 
 希尔排序每趟并不使某些元素有序，而是使整体数据越来越接近有序；最后一趟排序使得所有数据有序
 
-<img src="D:/桌面/note/assets/排序/image-20220228175839844.png" alt="image-20220228175839844" style="zoom:50%;" />
+<img src="排序.assets/image-20220228175839844-164613650507210.png" alt="image-20220228175839844" style="zoom:50%;" />
 
-<img src="D:/桌面/note/assets/排序/image-20220228175859181.png" alt="image-20220228175859181" style="zoom:50%;" />
+<img src="排序.assets/image-20220228175859181-16461365023098.png" alt="image-20220228175859181" style="zoom:50%;" />
 
-<img src="D:/桌面/note/assets/排序/image-20220228175919639.png" alt="image-20220228175919639" style="zoom:50%;" />
+<img src="排序.assets/image-20220228175919639-16461365035229.png" alt="image-20220228175919639" style="zoom:50%;" />
 
 ### 2、时间复杂度
 
@@ -422,7 +422,7 @@ def count_sort(li,max_count=100):
 
 桶排序(Bucket Sort)：首先将元素分在不同的桶中，在对每个桶中的元素排序。
 
-<img src="D:/桌面/note/assets/排序/image-20220301162609650.png" alt="image-20220301162609650" style="zoom:50%;" />
+<img src="排序.assets/image-20220301162609650-164613650890111.png" alt="image-20220301162609650" style="zoom:50%;" />
 
 桶排序的表现取决于数据的分布(集中在某个桶，前面只有几个数)。也就是需要对不同数据排序时采取不同的分桶策略。
 
@@ -478,4 +478,4 @@ def bucket_sort(li,n=100,max_num=1000000):    #一百个桶，最大数10000
 
 堆排序：在快的排序算法中相对较慢
 
-![image-20220228174923725](D:/桌面/note/assets/排序/image-20220228174923725.png)
+![image-20220228174923725](排序.assets/image-20220228174923725-164613651395412.png)
