--- a/LeetCode/排序.md
+++ b/LeetCode/排序.md
@@ -424,13 +424,13 @@ def count_sort(li,max_count=100):
 
 <img src="排序.assets/image-20220301162609650-164613650890111.png" alt="image-20220301162609650" style="zoom:50%;" />
 
-桶排序的表现取决于数据的分布(集中在某个桶，前面只有几个数)。也就是需要对不同数据排序时采取不同的分桶策略。
+桶排序的表现取决于数据的分布(集中在某个桶，前面只有几个数)。也就是需要对不同数据排序时采取不同的分桶策略。 
 
 ### 2、平均情况时间复杂度：$$O(n+k)$$
 
 最坏情况时间复杂度：$$O(n^{2}k)$$
 
-空间复杂度：$$O(nk)$$
+空间复杂度：$$O(n+k)$$
 
 ```python
 def bucket_sort(li,n=100,max_num=1000000):    #一百个桶，最大数10000
@@ -456,9 +456,29 @@ def bucket_sort(li,n=100,max_num=1000000):    #一百个桶，最大数10000
 
 ### 1、原理
 
+多关键字排序：加入现在有一个员工表，要求按照薪资排序，年龄相同的员工按照年龄排序。先按照年龄进行排序，再按照薪资进行稳定的排序。
 
+对32,13,94,52,17,54,93排序，是否可以看做多关键字排序？
 
+```python
+def radix_sort(li):
+    max_num = max(li)   #最大值 99 -> 做2次   888 -> 做3次
+    it = 0
+    while 10 ** it <= max_num:
+        buckets = [[] for _ in range(10)]
+        for var in li:
+            # 987 it=1 取7
+            dig = (var // 10 ** it) % 10
+            buckets[dig].append(var)
+        li.clear()
+        for buc in buckets:
+            li.extend(buc)
+        it += 1
+```
 
+### 2、时间复杂度$$O(kn)$$
+
+空间复杂度：$$O(n+k)$$
 
 
 
